[package]
name = "packline"
version = "0.1.0"
authors = ["Vinícius Jabes <vinijabes@gmail.com>"]
edition = "2018"

[dependencies]
packline_flow = { path = "packline_flow" }
packline_core = { path = "packline_core", features = ["full"]}

tokio = { version = "1.4.0", features = ["full"] }
futures = "0.3.13"

ctrlc = { version = "3.0", features = ["termination"] }
