[package]
name = "packline"
version = "0.1.0"
authors = ["Vinícius Jabes <vinijabes@gmail.com>"]
edition = "2021"
repository = "https://github.com/vinijabes/packline/"

[dependencies]
packline_flow = { path = "../packline_flow" }
packline_cli = { path = "../packline_cli" }
packline_core = { path = "../packline_core", features = ["full"] }
tokio = { version = "1.11.0", features = ["full"] }
futures = "0.3.13"
ctrlc = { version = "3.0", features = ["termination"] }
tracing = "0.1"
tracing-subscriber = "0.2"
rand = "0.8.0"
