[package]
name = "packline_cli"
version = "0.1.0"
authors = ["Vinícius Jabes <vinijabes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packline_flow = { path = "../packline_flow" }

tokio = { version = "1.4.0", features = ["process"] }
tokio-util = {version = "0.6.5", features = ["codec"]}
futures = "0.3.13"