[package]
name = "packline_cli"
version = "0.1.0"
authors = ["Vinícius Jabes <vinijabes@gmail.com>"]
edition = "2021"
repository = "https://github.com/vinijabes/packline/"

[dependencies]
packline_flow = { path = "../packline_flow" }
log = "0.4.17"
tokio = { version = "1.21.2", features = ["process"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
futures = "0.3.25"
