[package]
name = "packline_core"
version = "0.1.0"
authors = ["Vinícius Jabes <vinijabes@gmail.com>"]
edition = "2021"
repository = "https://github.com/vinijabes/packline/"

[lib]
name = "packline_core"

[dev-dependencies]
tokio-test = "0.4.2"

[dependencies]
tokio = { version = "1.21.2", features = ["process", "net", "macros"] }
async-trait = { version = "0.1.52" }
futures = "0.3.25"
tracing = "0.1.37"
spin = "0.9.4"

[features]
default = ["broker"]
full = ["broker", "connector"]
broker = []
connector = ["broker"]
