[package]
name = "packline_flow"
version = "0.1.0"
authors = ["Vinícius Jabes <vinijabes@gmail.com>"]
edition = "2021"
repository = "https://github.com/vinijabes/packline/"

[lib]
name = "packline_flow"

[dependencies]
flow_derive = { path = "libs/flow_derive" }
packline_core = { path = "../packline_core", features = ["connector"] }
async-trait = { version = "0.1.52" }
tokio = { version = "1.17.0", features = ["process", "sync"] }
tokio-util = { version = "0.7.0", features = ["codec"] }
bytes = "1.0.0"
futures = "0.3.21"
rand = "0.8.0"
tracing = "0.1"
tracing-subscriber = "0.3.9"
