[package]
name = "flow_derive"
version = "0.1.0"
authors = ["Vinícius Jabes <vinijabes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "flow_derive"
proc-macro = true


[dependencies]
syn = "1.0.60"
proc-macro2 = "1.0"
quote = "1.0"